[build-system]
requires = ["setuptools >= 59.6.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.9"
name = "enrich_classifications"
version = "1"
dependencies = ["requests"]
authors = [
  {name = "Philipp Kozjak", email = "philipp.kozjak@obvsg.at"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}

[project.urls]
Repository = "https://github.com/OBVSG/enrich_classifications.git"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

