[build-system]
requires = ["setuptools >= 59.6.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.9"
name = "enrich_classifications"
version = "2"
dependencies = ["requests"]
authors = [
  {name = "Philipp Kozjak", email = "philipp.kozjak@obvsg.at"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}

[project.scripts]
alma_rest_bib_enricher = "alma_rest_bib_enricher:main"
marc_xml_file_enricher = "marc_xml_file_enricher:main"

[project.urls]
Repository = "https://github.com/OBVSG/enrich_classifications.git"

[tool.ruff.lint]
select = ["ALL"]
ignore = []

